# Frauditor

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.dev.yml  dockerfile.dev  dockerfile.microservice  dockerfile.prod
.github/workflows/: dev-ci.yml  main-cd.yml  main-ci.yml  microservice-cd.yml  microservice-ci.yml
backend/: .env  .gitignore  dev.env  docker-entry.sh  manage.py  prod.env  pyproject.toml  requirements.txt
backend/Frauditor/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/classification_model/: model.py
backend/fraud_detection/: __init__.py  api.py  apps.py  ml_engine.py  models.py  utils.py
backend/fraud_detection/models/: model_performance_report.json
backend/review/: api.py  schemas.py
backend/scraper/: json2csv.py  merged_reviews.csv  models.py  scraper.js  shcemas.py
backend/scraper/migrations/: 0001_initial.py
backend/user/: admin.py  api.py  schemas.py
backend/user/management/commands/: init_superuser.py
backend/user/migrations/: 0001_initial.py
classification_service/: fakereviewdetector.py  main.py  requirements.txt
classification_service/classification_model/: model.py
classification_service/schemas/: schema.py
frontend/: background.js  content.js  manifest.json  utils.js
frontend/popup/: popup.css  popup.html  popup.js
frontend/styles/: injected.css
ml_development/data/processed/: merged_reviews_labeled.csv
ml_development/notebooks/: Frauditor_ML_Training.ipynb
ml_development/tests/model_validation/: test_results.csv
